--- a/localist/client/localist.html
+++ b/localist/client/localist.html
@@ -1,9 +1,12 @@
 <head>
   <title>Localist</title>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="aA9am-phktGC1bXfVYMc7f7jT7Qq3BZgYVzB4UYlPrI" />
+  <!-- <meta name="google-site-verification" content="aA9am-phktGC1bXfVYMc7f7jT7Qq3BZgYVzB4UYlPrI" /> -->
   <meta property="og:title" content=""/>
   <meta name="description" content="Find the most interesting places in town, recommended by locals.">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="fragment" content="!">
 </head>
 
 <body>
